[project]
name = "ticker-rss"
version = "0.2.1"
description = "RSS feed generator for Oklahoma Mesonet Ticker"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4==4.10.0",
    "feedgen==1.0.0",
    "requests==2.26.0",
    "lxml"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
]

[tool.uv]
dev-dependencies = []
