[project]
name = "ticker-rss"
version = "0.2.1"
description = "RSS feed generator for Oklahoma Mesonet Ticker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.5",
    "feedgen==1.0.0",
    "requests==2.32.5.0",
    "lxml==6.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
]

[tool.uv]
dev-dependencies = []
